Fix notification location on mobile

--- a/website/src/pages/Menu.css
+++ b/website/src/pages/Menu.css
@@ -45,7 +45,4 @@
       width: 100% !important;
       padding: 10px 0 !important;
     }
-    .menu-notification {
-      left: 12vw !important;
-    }
 }
