--- a/website/src/pages/ShoppingCart.css
+++ b/website/src/pages/ShoppingCart.css
@@ -76,7 +76,4 @@
       input[type="tel"] {
         font-size: 16px !important;
     }
-    .cart-notification {
-        left: 6vw !important;
-    }
 }
